3 consecutive bobas later

--- a/web/index.html
+++ b/web/index.html
@@ -22,25 +22,26 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="MealPlanner">
+  <meta name="apple-mobile-web-app-title" content="Lemon">
 
   
 
   <meta name="robots" content="noindex" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" href="Juce--Streamline-Simple-Icons.svg.png" sizes="any"/>
+  
 
   <!-- Open Graph & SEO tags -->
-  <meta property="og:title" content="MealPlanner" />
+  <meta property="og:title" content="Lemon" />
   <meta property="og:description" content="Built with FlutterFlow." />
-  <meta property="og:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" /> 
-  <meta name="twitter:title" content="MealPlanner" />
+  <meta property="og:image" content="/assets/assets/images/Juce--Streamline-Simple-Icons.svg.png" /> 
+  <meta name="twitter:title" content="Lemon" />
   <meta name="twitter:description" content="Built with FlutterFlow." />
-  <meta name="twitter:image" content="https://storage.googleapis.com/flutterflow-prod-hosting/og_splash_gradient.png" />
+  <meta name="twitter:image" content="/assets/assets/images/Juce--Streamline-Simple-Icons.svg.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <title> MealPlanner </title>
+  <title> Lemon </title>
   <meta name="description" content="Built with FlutterFlow." />
     
 
